# django-cornucopia

./: .gitignore  MANIFEST.in  README.md  docker-compose.yaml  setup.cfg
cornucopia/: __init__.py  admin.py  apps.py  urls.py  views.py
cornucopia/migrations/: 0001_initial.py
cornucopia/models/: __init__.py  boards.py  posts.py  reports.py  tags.py  users.py  zones.py
cornucopia/views/: __init__.py  auth.py  boards.py  galleries.py  management.py  posts.py  root.py  tags.py  tokens.py  users.py
dockerized/dev/: Dockerfile  requirements.txt  start_dev.sh
dockerized/dev/dev/: settings.py  urls.py
dockerized/dev/users/: apps.py
integration/dev/: .gitignore
integration/dev/dev/: settings.py  urls.py
integration/dev/users/management/commands/: createsuperuser_dev.py
integration/dev/users/migrations/: 0001_initial.py
