[metadata]
name = django-cornucopia
version = 0.0.1
description = A Django app containing the Cornucopia image hosting system
long_description = file: README.md
author = AlexandraAlter
author_email = alexandra.alter@protonmail.com
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System

[options]
include_package_data = true
packages = find:
